# LLM2CAD

./: .env.example  .gitignore  DESIGN_SPEC.md  DESIGN_SPEC_V3.md  README.md  asymmetric_four_port_manifold.20260711-103041.FCBak  asymmetric_four_port_manifold.FCStd  asymmetric_four_port_manifold.step  pyproject.toml  requirements.txt  run.cmd  run.sh
.claude/: settings.local.json
cadgen/: __init__.py  artifact_store.py  cli.py  config.py  conflict_certificate.py  conflict_kernel.py  constraint_preflight.py  contract_core.py  diagnostics.py  dry_run_planner.py  freecad_app.py  freecad_launcher.py  freecad_mcp.py  freecad_mcp_client.py  freecad_script.py  freecad_script_builder.py  gemini_client.py  gemini_llm_client.py  generation_pipeline.py  geometry_analysis.py  geometry_policy.py  geometry_safety_policy.py  hashing.py  host_candidate_trial.py  intent_action_compiler.py  intent_geometry_contracts.py  legal_candidate_menu.py  llm_prompt_builder.py  local_heuristic.py  pipe_state_engine.py  pipeline.py  pipeline_checkpoint.py  pipeline_mcp_policy.py  pipeline_reporting.py  pipeline_workspace.py  port_algebra.py  primitive_action_catalog.py  primitive_compiler.py  prompts.py  registry.py  (+20 more)
docs/: 2026-07-11_pipe_cad_architecture_rebuild_ko.md  step_geometry_diagnostician_design.md
outputs/: error_analysis.md
prompts/: complex_serial_coil.txt  complex_two_y_manifold.txt
tests/: conftest.py  test_circular_arc_policy.py  test_config_and_pipeline.py  test_contract_core_architecture.py  test_diagnostics.py  test_freecad_evidence_hardening.py  test_intent_hardening.py  (+7 more)
(+1572 files in other folders)
